[tool.poetry]
name = "tundra"
version = "0.1.0"
description = ""
authors = ["Simen Svenkerud"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0.3"
pyyaml = "^6.0.1"
regex = "^2023.10.3"
dictdiffer = "^0.9.0"
wheel = "^0.43.0"
setuptools = "^69.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.6.1"
black = "^24.3.0" 
isort = "^5.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
